packages/CodeStyle/Annotate/tests/valid/AbsoluteNamespaceUsage.php
<?php

namespace Foo\Bar;

use Nette\Utils\Strings;
use StdClass;


class Bar
{

	public function foo(StdClass $stdClass)
	{
		return FALSE;
	}



	public function bar(Strings $strings)
	{
	}

}
