packages/CodeStyle/Annotate/tests/invalid/AbsoluteNamespaceUsage.php
<?php

namespace Foo\Bar;


class Bar
{

	public function foo(\StdClass $stdClass)
	{
		return FALSE;
	}



	public function bar(\Nette\Utils\Strings $strings)
	{
	}

}
